subcomments in one block with labels and linebreaks. The value_db is
the value for storage, it has no label descriptors, and subcomments
separated by ::: for splitting.

The entries in categorydef for report categories now have type=cat
instead of type=rep.

Transfers in from feeder schools are now counted correctly as part of
the ernolments table.


Version ClaSS-0.8.64 release (2009/02/03)
-----------------------------------------

Fix to allow for assessment profiles which have the same name but
apply to different courses (can't have two profiles with same name for
same course, of course!)

The use of cohorts for report_reports is confusing because it doesn't
then include the wrapper and the reports are not thought of as course
specific anyway. Its been eliminated.

Added a reopen action button for closed orders.

Fixed navigation between enrol years when editing enrolment columns.

Fix to budget values in enrolments' table.

Improved the logic of averaging columns in the MarkBook. Plus a
related fix to the special profile column so it doesn't get confused
by columns which are not part of the running average.



Version ClaSS-0.8.63 release (2009/01/22)
-----------------------------------------

Fix for rare erroneous display of a register as complete when current
event is not set.

Fix to the cilumn filter in the MarkBook, the new multiple profiles
had introduced a problem when anything other than 'All' was selected.

Fix to the display of mrs for in the title field caused by an error in
the lang file.

Labelling of the column filter changed to empahsise R for Reports, as
T for tracking is moving to the P for profile assessments.


Version ClaSS-0.8.62 release (2009/01/08)
-----------------------------------------

Removed the categorydef for budget types which was just being too
prescriptive.

Amended the order of budgets on the main orders.php page to list
subbudgets following directly on from their overbudget.
