@@ -318,5 +318,6 @@ $string['configure']='Configure';
 $string['categories']='Categories';
 $string['pending']='Re-enroling Pending';
 $string['message']='Message';
-$string['']='';
+$string['<']='<';
+$string['>']='>';
 ?>
